--- a/index.html
+++ b/index.html
@@ -11,22 +11,18 @@
   <title>BeeKaranta | front-end challenge</title>
 </head>
 <body>
-  <div id="bee-qrcod-app" class="bee-qrcod-app">
-    <div class="wrapper">
-      <div class="qrcode">
-        <img class="qrcode__img" src="./assets/images/image-qr-code.png"  alt="QRCode" srcset="">
-        <div>
-          <h1 class="qrcode__title">
-            Improve your front-end skills by building projects
-          </h1>
-          <!-- <div > -->
-          <p class="qrcode__desc">
-            Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
-          </p>
-          <!-- </div> -->
-        </div>
+  <main id="bee-qrcod-app">
+    <div class="qrcode">
+      <img class="qrcode__img" src="./assets/images/image-qr-code.png"  alt="QRCode">
+      <div class="qrcode__body">
+        <h1 class="qrcode__title">
+          Improve your front-end skills by building projects
+        </h1>
+        <p class="qrcode__desc">
+          Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
+        </p>
       </div>
     </div>
-  </div>
+  </main>
 </body>
 </html>
