--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <title>BeeKaranta | front-end challenge</title>
 </head>
 <body>
-  <main id="bee-qrcod-app">
+<div id="bee-qrcod-app" class="bee-qrcod-app">
+  <main role="main">
     <div class="qrcode">
       <img class="qrcode__img" src="./assets/images/image-qr-code.png"  alt="QRCode">
       <div class="qrcode__body">
@@ -24,5 +25,10 @@
       </div>
     </div>
   </main>
+  <footer class="attribution">
+    <p> Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. </p>
+    <p>Coded by <a href="#">Your Name Here</a>.</p>
+  </footer>
+</div>
 </body>
 </html>
