Removing a test role attribute

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <div id="bee-qrcod-app" class="bee-qrcod-app">
-  <main role="main">
+  <main>
     <div class="qrcode">
       <img class="qrcode__img" src="./assets/images/image-qr-code.png"  alt="QRCode">
       <div class="qrcode__body">
