--- a/index.html
+++ b/index.html
@@ -11,24 +11,20 @@
   <title>BeeKaranta | front-end challenge</title>
 </head>
 <body>
-<div id="bee-qrcod-app" class="bee-qrcod-app">
-  <main>
-    <div class="qrcode">
-      <img class="qrcode__img" src="./assets/images/image-qr-code.png"  alt="QRCode">
-      <div class="qrcode__body">
-        <h1 class="qrcode__title">
-          Improve your front-end skills by building projects
-        </h1>
-        <p class="qrcode__desc">
-          Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
-        </p>
-      </div>
+  <main id="bee-qrcod-app" class="qrcode">
+    <img class="qrcode__img" src="./assets/images/image-qr-code.png"  alt="a QRcode to to scan">
+    <div class="qrcode__body">
+      <h1 class="qrcode__title">
+        Improve your front-end skills by building projects
+      </h1>
+      <p class="qrcode__desc">
+        Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
+      </p>
     </div>
   </main>
-  <footer class="attribution">
+  <div class="attribution">
     <p> Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. </p>
     <p>Coded by <a href="#">Your Name Here</a>.</p>
-  </footer>
-</div>
+  </div>
 </body>
 </html>
