create another file for reset css

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <title>BeeKaranta | front-end challenge</title>
 </head>
 <body>
-  <main id="bee-qrcod-app" class="qrcode">
+  <main class="qrcode">
     <img class="qrcode__img" src="./assets/images/image-qr-code.png"  alt="a QRcode to to scan">
     <div class="qrcode__body">
       <h1 class="qrcode__title">
