--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </main>
   <div class="attribution">
     <p> Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. </p>
-    <p>Coded by <a href="#">Your Name Here</a>.</p>
+    <p>Coded by <a href="https://www.beekaranta.com" target="_blank">s17 (BeeKaranta)</a>.</p>
   </div>
 </body>
 </html>
