--- a/index.html
+++ b/index.html
@@ -11,20 +11,23 @@
   <title>BeeKaranta | front-end challenge</title>
 </head>
 <body>
-  <main class="qrcode">
-    <img class="qrcode__img" src="./assets/images/image-qr-code.png"  alt="a QRcode to to scan">
-    <div class="qrcode__body">
-      <h1 class="qrcode__title">
-        Improve your front-end skills by building projects
-      </h1>
-      <p class="qrcode__desc">
-        Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
-      </p>
+  <main class="bee-qrcode-app">
+    <div class="qrcode">
+      <img class="qrcode__img" src="./assets/images/image-qr-code.png"  alt="a QRcode to to scan">
+      <div class="qrcode__body">
+        <h1 class="qrcode__title">
+          Improve your front-end skills by building projects
+        </h1>
+        <p class="qrcode__desc">
+          Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
+        </p>
+      </div>
+    </div>
+
+    <div class="attribution">
+      <p> Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. </p>
+      <p>Coded by <a href="https://www.beekaranta.com" target="_blank">s17 (BeeKaranta)</a>.</p>
     </div>
   </main>
-  <div class="attribution">
-    <p> Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. </p>
-    <p>Coded by <a href="https://www.beekaranta.com" target="_blank">s17 (BeeKaranta)</a>.</p>
-  </div>
 </body>
 </html>
