--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
     <div class="attribution">
       <p> Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. </p>
-      <p>Coded by <a href="https://www.beekaranta.com" aria-labelledby="beekaranta website" target="_blank">s17 (BeeKaranta)</a>.</p>
+      <p>Coded by <a href="https://www.beekaranta.com" aria-label="beekaranta website" target="_blank">s17 (BeeKaranta)</a>.</p>
     </div>
   </main>
 </body>
