--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <main class="bee-qrcode-app">
     <div class="qrcode">
-      <img class="qrcode__img" src="./assets/images/image-qr-code.png"  alt="a QRcode to to scan">
+      <img class="qrcode__img" src="./assets/images/image-qr-code.png"  alt="a QRcode to scan">
       <h1 class="qrcode__title">
         Improve your front-end skills by building projects
       </h1>
